--- a/valencia.html
+++ b/valencia.html
@@ -1,1 +1,10 @@
-<h1>Valencia 2024!</h1>
+<h1>Valencia 2025!</h1>
+
+para download das novidades do servidor para o nosso computador podemos
+
+a) 
+git fetch 
++
+git merge
+
+b) git pull
