--- a/valencia.html
+++ b/valencia.html
@@ -1,4 +1,4 @@
-<h1>Valencia 2025!</h1>
+<h1>Valencia 2026!</h1>
 
 para download das novidades do servidor para o nosso computador podemos
 
@@ -7,4 +7,5 @@ git fetch
 +
 git merge
 
-b) git pull
+b) git pull 
+faz os dois comandos (fetch + merge)
